--- a/index.html
+++ b/index.html
@@ -56,29 +56,13 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="media/c6.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="media/c6.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px; object-fit: cover; ">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">
-    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Computer Society of India - Amity Student Branch</button>
+    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Amity CSI Student Branch</button>
   </div>
 </div>
 
-<!-- Modal -->
-<div id="id01" class="w3-modal">
-  <div class="w3-modal-content w3-card-4 w3-animate-top">
-    <header class="w3-container w3-teal w3-display-container">
-      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-teal w3-display-topright"><i class="fa fa-remove"></i></span>
-      <h4>Oh snap! We just showed you a modal..</h4>
-      <h5>Because we can <i class="fa fa-smile-o"></i></h5>
-    </header>
-    <div class="w3-container">
-      <p>Cool huh? Ok, enough teasing around..</p>
-      <p>Go to our <a class="w3-text-teal" href="/w3css/default.asp">W3.CSS Tutorial</a> to learn more!</p>
-    </div>
-    <footer class="w3-container w3-teal">
-      <p>Modal footer</p>
-    </footer>
-  </div>
-</div>
+
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
@@ -88,7 +72,7 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="media/Jaskirat.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <a href="https://www.linkedin.com/in/jaskiratoberoi/"><img src="media/Jaskirat.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   <h3>Jaskirat Singh Oberoi</h3>
   <p>President</p>
 </div>
@@ -169,25 +153,26 @@
 <div class="w3-row-padding w3-center w3-padding-64" id="aboutus">
     <h2>About Us</h2>
     <p>What our Student Branch Stands for and What We Do</p><br>
-    <div class="information" id="info">
-      Our Student branch has been in place for many years. We are a University Level Society in Amity University,
-      conducting many events, workshops, seminars, interactive sessions, hands-on lectures, competitions etc.
-      Amity CSI Student Branch is a part of the Noida CSI Chapter and comes under the Region-I of the National Level
-      CSI Division. Our Student Branch Faculty Coordinators are:
+    <div class="information info2" id="info">
+      Our Student branch has been working actively for past many years. We are a University Level Branch at Amity University Noida campus,
+      conducting many events, workshops, seminars, interactive lectures, hands-on sessions, competitions etc.
+      Amity CSI Student Branch comes under the Region-I of the National Level
+      CSI Division. Our Student Branch Counsellor/Coordinator are:
       <div class="w3-row"><br>
 
       <div class="w3-half">
-        <img src="media/download.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-        <h3>Ms Nitasha Hasteer</h3>
-        <p>Dean of Academics</p>
+        <img src="media/nh.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+        <h3>Dr Nitasha Hasteer</h3>
+        <p>Student Branch Counsellor</p>
+        <p>Dy. Director[Academics]</p>
         <p>Amity School of Engineering & Technology</p>
       </div>
 
       <div class="w3-half">
-        <img src="media/download.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-        <h3>Mr Ritu Punhani</h3>
-        <p>CSI Coordinator</p>
-        <p> Department of Information Technology</p>
+        <img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+        <h3>Ms. Ritu Punhani</h3>
+        <p>CSI Faculty Coordinator</p>
+        <p>Department of Information Technology</p>
       </div>
 
 
@@ -232,7 +217,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
-  
+
   <p>Created by <a href="https://www.facebook.com/jaskirat.singh.oberoi.1996" target="_blank">Jaskirat Singh Oberoi</a></p>
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
