--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <title>Amtiy CSI Student Branch</title>
@@ -56,13 +56,11 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="media/c6.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px; object-fit: cover; ">
+  <img src="media/c6.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px; object-fit: cover;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">
     <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Amity CSI Student Branch</button>
   </div>
 </div>
-
-
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
@@ -72,7 +70,7 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <a href="https://www.linkedin.com/in/jaskiratoberoi/"><img src="media/Jaskirat.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+  <a href="https://www.linkedin.com/in/jaskiratoberoi/" target="_blank"><img src="media/Jaskirat.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   <h3>Jaskirat Singh Oberoi</h3>
   <p>President</p>
 </div>
@@ -84,13 +82,13 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="media/Saraf.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <a href="https://www.linkedin.com/in/shivam-saraf-046a52168/" target="_blank"><img src="media/Saraf.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   <h3>Shivam Saraf</h3>
   <p>Secretary</p>
 </div>
 
 <div class="w3-quarter">
-  <img src="media/aditi.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <a href="https://www.linkedin.com/in/aditi-jha-95b633120/" target="_blank"><img src="media/aditi.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   <h3>Aditi Jha</h3>
   <p>Treasurer</p>
 </div>
@@ -161,20 +159,19 @@
       <div class="w3-row"><br>
 
       <div class="w3-half">
-        <img src="media/nh.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-        <h3>Dr Nitasha Hasteer</h3>
+        <a href="https://www.linkedin.com/in/dr-nitasha-hasteer-96b9933a/" target="_blank"><img src="media/nh.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+        <h3>Dr. Nitasha Hasteer</h3>
         <p>Student Branch Counsellor</p>
-        <p>Dy. Director[Academics]</p>
+        <p>Dy. Director(Academics)</p>
         <p>Amity School of Engineering & Technology</p>
       </div>
-
-      <div class="w3-half">
-        <img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+	<div class="w3-half">
+        <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
         <h3>Ms. Ritu Punhani</h3>
-        <p>CSI Faculty Coordinator</p>
+  	<p>CSI Faculty Coordinator</p>
         <p>Department of Information Technology</p>
       </div>
-
+     
 
     </div>
 
@@ -188,7 +185,7 @@
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
       <h3>Address</h3>
       <p>Swing by to participate in one of our events.</p>
-      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> E2 Block, Amity University, Sector - 125, Noida , UP - 201303</p>
+      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> E2 Block, Amity University, Sector - 125, Noida , UP - 201313</p>
       <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +91 9810189264</p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  kovidbhayana.97@gmail.com</p>
     </div>
