--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <a href="#" class="w3-bar-item w3-button">2016-2017</a>
     </div>
   </div>
+  <a href="slc.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">CSI UP State Student Convention 2019</a>
   <a href="https://www.facebook.com/csiamity/" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Facebook">Latest Updates<i class="fa fa-facebook" style="padding: 0 0px 0 10px "></i></a>
  </div>
 
@@ -50,7 +51,7 @@
     <a href="#work" class="w3-bar-item w3-button">Work</a>
     <a href="#aboutus" class="w3-bar-item w3-button">About us</a>
     <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    <a href="#" class="w3-bar-item w3-button">Search</a>
+    <a href="slc.html" class="w3-bar-item w3-button">CSI UP State Student Convention 2019</a>
   </div>
 </div>
 
@@ -171,7 +172,7 @@
   	<p>CSI Faculty Coordinator</p>
         <p>Department of Information Technology</p>
       </div>
-     
+
 
     </div>
 
