--- a/slc.html
+++ b/slc.html
@@ -48,7 +48,39 @@
     <h1 class="heading margin3 margin2">CSI UP State Student Convention 2019</h1>
 
   </div>
+  <!-- Events Container -->
+  <div class="w3-container w3-padding-64 w3-center" id="team">
+  <h2>THE EVENTS</h2>
+  <p>The FOUR Mega events for all studentsto participate:</p>
 
+  <div class="w3-row"><br>
+
+  <div class="w3-quarter">
+    <img src="media/1.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+    <h3>CODE HUNT 3.0</h3>
+    <p>cout<<"Treasure Hunt";</p>
+  </div>
+
+  <div class="w3-quarter">
+    <img src="media/2.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+    <h3>WEAVING THE WEB</h3>
+    <p>404 Page not found!</p>
+  </div>
+
+  <div class="w3-quarter">
+    <img src="media/3.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+    <h3>DECRYPTON 5.0</h3>
+    <p>[T9] 430968046808447084360844703836804703670968</p>
+  </div>
+
+  <div class="w3-quarter">
+    <img src="media/4.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+    <h3>QUIZ-O-MANIA</h3>
+    <p>Welcome to the tech Gameshow</p>
+  </div>
+
+  </div>
+  </div>
 
 </body>
 </html>
