--- a/slc.html
+++ b/slc.html
@@ -51,12 +51,12 @@
   <!-- Events Container -->
   <div class="w3-container w3-padding-64 w3-center" id="team">
   <h2>THE EVENTS</h2>
-  <p>The FOUR Mega events for all studentsto participate:</p>
+  <p>The FOUR Mega events for all students to participate:</p>
 
   <div class="w3-row"><br>
 
   <div class="w3-quarter">
-    <img src="media/1.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+    <img src="media/1.jpg" alt="Boss" style="width:45%;" class="w3-circle w3-hover-opacity">
     <h3>CODE HUNT 3.0</h3>
     <p>cout<<"Treasure Hunt";</p>
   </div>
@@ -70,13 +70,13 @@
   <div class="w3-quarter">
     <img src="media/3.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
     <h3>DECRYPTON 5.0</h3>
-    <p>[T9] 430968046808447084360844703836804703670968</p>
+    <p>01100011 01101001 01110000 01101000 01100101 01110010 01110011</p>
   </div>
 
   <div class="w3-quarter">
     <img src="media/4.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
     <h3>QUIZ-O-MANIA</h3>
-    <p>Welcome to the tech Gameshow</p>
+    <p>Welcome to the Tech Gameshow</p>
   </div>
 
   </div>
