--- a/index.html
+++ b/index.html
@@ -142,11 +142,6 @@
 
 </div>
 
-<!-- Container -->
-<div class="w3-container" style="position:relative">
-  <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal"
-  style="position:absolute;top:-28px;right:24px">+</a>
-</div>
 
 <!-- about us Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="aboutus">
@@ -216,7 +211,7 @@
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
 
-  <p>Created by <a href="https://www.facebook.com/jaskirat.singh.oberoi.1996" target="_blank">Jaskirat Singh Oberoi</a></p>
+  <p>©2019 Created by <a href="https://www.facebook.com/jaskirat.singh.oberoi.1996" target="_blank">Jaskirat Singh Oberoi</a></p>
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
     <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
