--- a/slc.html
+++ b/slc.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="main.CSS">
 </head>
-<body id="myslc">
+<body id="#myslc">
 
   <!-- Navbar -->
   <div class="w3-top">
@@ -81,6 +81,55 @@
 
   </div>
   </div>
+
+
+  <!-- about us Row -->
+  <div class="w3-row-padding w3-center w3-padding-64" id="aboutus">
+      <h2>About Us</h2>
+      <p>What our Student Branch Stands for and What We Do</p><br>
+      <div class="information info2" id="info">
+        Our Student branch has been working actively for past many years. We are a University Level Branch at Amity University Noida campus,
+        conducting many events, workshops, seminars, interactive lectures, hands-on sessions, competitions etc.
+        Amity CSI Student Branch comes under the Region-I of the National Level
+        CSI Division. Our Student Branch Counsellor/Coordinator are:
+        <div class="w3-row"><br>
+
+        <div class="w3-half">
+          <a href="https://www.linkedin.com/in/dr-nitasha-hasteer-96b9933a/" target="_blank"><img src="media/nh.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Dr. Nitasha Hasteer</h3>
+          <p>Student Branch Counsellor</p>
+          <p>Dy. Director(Academics)</p>
+          <p>Amity School of Engineering & Technology</p>
+        </div>
+  	<div class="w3-half">
+          <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Ms. Ritu Punhani</h3>
+    	<p>CSI Faculty Coordinator</p>
+          <p>Department of Information Technology</p>
+        </div>
+
+
+      </div>
+
+  </div>
+  </div>
+
+
+
+
+
+  <!-- Footer -->
+  <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
+
+    <p>©2019 Created by <a href="https://www.facebook.com/jaskirat.singh.oberoi.1996" target="_blank">Jaskirat Singh Oberoi</a></p>
+
+    <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
+      <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
+      <a class="w3-button w3-theme" href="#myslc"><span class="w3-xlarge">
+      <i class="fa fa-chevron-circle-up"></i></span></a>
+    </div>
+  </footer>
+
 
 </body>
 </html>
