--- a/slc.html
+++ b/slc.html
@@ -85,13 +85,52 @@
 
   <!-- about us Row -->
   <div class="w3-row-padding w3-center w3-padding-64 w3-theme-l1" id="aboutus">
-      <h2>About Us</h2>
-      <p>What our Student Branch Stands for and What We Do</p><br>
+      <h2>ARE YOU READY?</h2>
+      <p>Things are about to get INTERESTING...</p><br>
       <div class="information info2" id="info">
-        Our Student branch has been working actively for past many years. We are a University Level Branch at Amity University Noida campus,
-        conducting many events, workshops, seminars, interactive lectures, hands-on sessions, competitions etc.
-        Amity CSI Student Branch comes under the Region-I of the National Level
-        CSI Division. Our Student Branch Counsellor/Coordinator are:
+        o all the coders,treasure hunters, quiz masters and other tech masters get ready to scrutinize your tenacity.
+
+Come armed with thinking caps as this is the battle of wit and proficiency.🛡
+
+Unveiled here are the strings of events :
+
+• 🕵‍♀ Code Hunt 3.0  :
+Channel your inner detective through coding. Uncover clues, embark on a treasure hunt and code your way through secrets to zoom in on the amazing prizes !
+
+• 🧠💡 Quiz-O-Mania  :
+Do you love buzzer and rapid-fire quizzes ? This quiz will not disappoint as you answer questions on tech and show everyone your tech prowess !
+
+•👤 🔎 Decrypthon 4.0:
+Love to decrypt codes ? Be ready to solve puzzles and search your way to find the final code and decrypt it ! Don't fret though, use of internet is allowed.
+
+• 💻 Weaving the Web :
+Do you have what it takes to be a web developer ? Whether you are an amateur or an expert , take part in this to test your web development skills !
+
+
+🏛 Details🏛
+
+Date      :  28th & 29th March,2019
+Timing   :  9:00 A.M. onwards
+Venue    :  Amity University, Noida
+
+Registration Fee : Rs. 200/- for per           Non-CSI member
+                             Rs. 100/- for per CSI member
+
+• Participation certificate , booklet and a meal for every participant.
+
+• Exciting Gifts for winners.
+
+• Hurry limited seats, Register now at : http://bit.ly/Statelevelconvention_CSI
+
+
+💭 For further queries,
+
+📱 Contact :
+Kovid Bhayana
++91-9810189264
+
+Malvika Goyal
+‪+91 98114 86605‬
         <div class="w3-row"><br>
 
         <div class="w3-half">
