--- a/slc.html
+++ b/slc.html
@@ -88,44 +88,27 @@
       <h2>ARE YOU READY?</h2>
       <p>Things are about to get INTERESTING...</p><br>
       <div class="information info2" id="info">
-        o all the coders,treasure hunters, quiz masters and other tech masters get ready to scrutinize your tenacity.
+        <p>All the coders,treasure hunters, quiz masters and other tech masters get ready to scrutinize your tenacity.<br>
 
-Come armed with thinking caps as this is the battle of wit and proficiency.🛡
+Come armed with thinking caps as this is the battle of wit and proficiency.<br></p>
 
-Unveiled here are the strings of events :
+<p>Unveiled here are the strings of this Mega Event:</p>
 
-• 🕵‍♀ Code Hunt 3.0  :
-Channel your inner detective through coding. Uncover clues, embark on a treasure hunt and code your way through secrets to zoom in on the amazing prizes !
+<p>Date:  28th & 29th March,2019</p>
+<p>Timing:  9:00 A.M. onwards</p>
+<p>Venue:  Amity University, Noida</p>
 
-• 🧠💡 Quiz-O-Mania  :
-Do you love buzzer and rapid-fire quizzes ? This quiz will not disappoint as you answer questions on tech and show everyone your tech prowess !
+<p>Registration Fee: Rs. 200/- for per Non-CSI member<br>
+<padding-left:"20px">Rs. 100/- for per CSI member</p>
 
-•👤 🔎 Decrypthon 4.0:
-Love to decrypt codes ? Be ready to solve puzzles and search your way to find the final code and decrypt it ! Don't fret though, use of internet is allowed.
+<p>Participation certificate , booklet and a meal for every participant.</p>
 
-• 💻 Weaving the Web :
-Do you have what it takes to be a web developer ? Whether you are an amateur or an expert , take part in this to test your web development skills !
+<p>Exciting Gifts for winners.</p>
 
-
-🏛 Details🏛
-
-Date      :  28th & 29th March,2019
-Timing   :  9:00 A.M. onwards
-Venue    :  Amity University, Noida
-
-Registration Fee : Rs. 200/- for per           Non-CSI member
-                             Rs. 100/- for per CSI member
-
-• Participation certificate , booklet and a meal for every participant.
-
-• Exciting Gifts for winners.
-
-• Hurry limited seats, Register now at : http://bit.ly/Statelevelconvention_CSI
+<p>Hurry limited seats, Register now at : http://bit.ly/Statelevelconvention_CSI</p>
 
 
-💭 For further queries,
-
-📱 Contact :
+<p>For further queries, Contact:
 Kovid Bhayana
 +91-9810189264
 
