--- a/slc.html
+++ b/slc.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="main.CSS">
+<link rel="stylesheet" href="slc.CSS">
 </head>
 <body id="#myslc">
 
@@ -90,48 +90,53 @@
       <div class="information info2" id="info">
         <p>All the coders,treasure hunters, quiz masters and other tech masters get ready to scrutinize your tenacity.<br>
 
-Come armed with thinking caps as this is the battle of wit and proficiency.<br></p>
+          Come armed with thinking caps as this is the battle of wit and proficiency.<br></p>
 
-<p>Unveiled here are the strings of this Mega Event:</p>
+          <p>Unveiled here are the strings of this Mega Event:</p>
 
-<p>Date:  28th & 29th March,2019</p>
-<p>Timing:  9:00 A.M. onwards</p>
-<p>Venue:  Amity University, Noida</p>
+          <p>Date:  28th & 29th March,2019</p>
+          <p>Timing:  9:00 A.M. onwards</p>
+          <p>Venue:  Amity University, Noida</p>
 
-<p>Registration Fee: Rs. 200/- for per Non-CSI member<br>
-<padding-left:"20px">Rs. 100/- for per CSI member</p>
+          <p>Registration Fee: Rs. 200/- for per Non-CSI member<br>
+            <padding-left:"25px">Rs. 100/- for per CSI member</p>
 
-<p>Participation certificate , booklet and a meal for every participant.</p>
+            <p>Participation certificate , booklet and a meal for every participant.</p>
 
-<p>Exciting Gifts for winners.</p>
+            <p>Exciting Gifts for winners.</p>
 
-<p>Hurry limited seats, Register now at : http://bit.ly/Statelevelconvention_CSI</p>
+            <p>Hurry limited seats, Register now at : http://bit.ly/Statelevelconvention_CSI</p>
 
 
-<p>For further queries, Contact:
-Kovid Bhayana
-+91-9810189264
+            <p>For further queries, Contact:‬
+    <div class="w3-row"><br>
 
-Malvika Goyal
-‪+91 98114 86605‬
-        <div class="w3-row"><br>
-
-        <div class="w3-half">
+        <div class="w3-quarter">
           <a href="https://www.linkedin.com/in/dr-nitasha-hasteer-96b9933a/" target="_blank"><img src="media/nh.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Dr. Nitasha Hasteer</h3>
           <p>Student Branch Counsellor</p>
           <p>Dy. Director(Academics)</p>
           <p>Amity School of Engineering & Technology</p>
         </div>
-  	<div class="w3-half">
+  	<div class="w3-quarter">
           <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Ms. Ritu Punhani</h3>
-    	<p>CSI Faculty Coordinator</p>
+    	    <p>CSI Faculty Coordinator</p>
           <p>Department of Information Technology</p>
-        </div>
-
-
-      </div>
+    </div>
+    <div class="w3-quarter">
+          <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Ms. Ritu Punhani</h3>
+    	    <p>CSI Faculty Coordinator</p>
+          <p>Department of Information Technology</p>
+    </div>
+    <div class="w3-quarter">
+          <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Ms. Ritu Punhani</h3>
+    	    <p>CSI Faculty Coordinator</p>
+          <p>Department of Information Technology</p>
+    </div>
+  </div>
 
   </div>
   </div>
