--- a/slc.html
+++ b/slc.html
@@ -85,7 +85,7 @@
 
   <!-- about us Row -->
   <div class="w3-row-padding w3-center w3-padding-64 w3-theme-l1" id="aboutus">
-      <h2>ARE YOU READY?</h2>
+      <h2 class="head2">ARE YOU READY?</h2>
       <p>Things are about to get INTERESTING...</p><br>
       <div class="information info2" id="info">
         <p>All the coders,treasure hunters, quiz masters and other tech masters get ready to scrutinize your tenacity.<br>
