--- a/slc.html
+++ b/slc.html
@@ -94,47 +94,50 @@
 
           <p>Unveiled here are the strings of this Mega Event:</p>
 
-          <p>Date:  28th & 29th March,2019</p>
-          <p>Timing:  9:00 A.M. onwards</p>
-          <p>Venue:  Amity University, Noida</p>
+          <p><b>Date:</b>  28th & 29th March,2019</p>
+          <p><b>Timing:</b>  9:00 A.M. onwards</p>
+          <p><b>Venue:</b>  Amity University, Noida</p>
 
-          <p>Registration Fee: Rs. 200/- for per Non-CSI member<br>
-            <padding-left:"25px">Rs. 100/- for per CSI member</p>
+          <p><b>Registration Fee:</b> Rs. 200/- for every Non-CSI member<br>
+            <padding-left:"25px">Rs. 100/- for every <b>CSI member</b></p>
 
             <p>Participation certificate , booklet and a meal for every participant.</p>
 
             <p>Exciting Gifts for winners.</p>
 
-            <p>Hurry limited seats, Register now at : http://bit.ly/Statelevelconvention_CSI</p>
+            <p style="font-size: 20px">Hurry limited seats! Register now at : http://bit.ly/Statelevelconvention_CSI</p>
 
 
-            <p>For further queries, Contact:‬
+            <p><br><br>For further queries, Contact:‬</p>
     <div class="w3-row"><br>
 
         <div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/dr-nitasha-hasteer-96b9933a/" target="_blank"><img src="media/nh.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
-          <h3>Dr. Nitasha Hasteer</h3>
-          <p>Student Branch Counsellor</p>
-          <p>Dy. Director(Academics)</p>
-          <p>Amity School of Engineering & Technology</p>
+          <a href="https://www.linkedin.com/in/kovid-bhayana-b9644116a/" target="_blank"><img src="media/kovid.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Kovid Bhayana</h3>
+          <p>Vice President</p>
+          <p>+919810189264</p>
+          <p>Amity CSI Student Branch</p>
         </div>
   	<div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
-          <h3>Ms. Ritu Punhani</h3>
-    	    <p>CSI Faculty Coordinator</p>
-          <p>Department of Information Technology</p>
+          <a href="" target="_blank"><img src="media/download.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Malvika Goyal</h3>
+          <p>Publicity Coordinator</p>
+          <p>+919811486605</p>
+          <p>Amity CSI Student Branch</p>
     </div>
     <div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
-          <h3>Ms. Ritu Punhani</h3>
-    	    <p>CSI Faculty Coordinator</p>
-          <p>Department of Information Technology</p>
+          <a href="https://www.linkedin.com/in/sanyukta-shreshtha-569944176/" target="_blank"><img src="media/sanyukta.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Sanyukta Shreshtha</h3>
+    	    <p>Publicity Assistant</p>
+          <p>+919521409776</p>
+          <p>Amity CSI Student Branch</p>
     </div>
     <div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/ritu-punhani-2b081316/" target="_blank"><img src="media/rp.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
-          <h3>Ms. Ritu Punhani</h3>
-    	    <p>CSI Faculty Coordinator</p>
-          <p>Department of Information Technology</p>
+          <a href="" target="_blank"><img src="media/download.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Alina</h3>
+    	    <p>Publicity Assistant</p>
+          <p>+919999648478</p>
+          <p>Amity CSI Student Branch</p>
     </div>
   </div>
 
