--- a/slc.html
+++ b/slc.html
@@ -105,7 +105,7 @@
 
             <p>Exciting Gifts for winners.</p>
 
-            <p style="font-size: 20px">Hurry limited seats! Register now at : http://bit.ly/Statelevelconvention_CSI</p>
+            <p style="font-size: 20px">Hurry limited seats! <a href="http://bit.ly/Statelevelconvention_CSI" target="_blank" class="links">CLICK HERE</a> to Register NOW</p>
 
 
             <p><br><br>For further queries, Contact:‬</p>
@@ -119,7 +119,7 @@
           <p>Amity CSI Student Branch</p>
         </div>
   	<div class="w3-quarter">
-          <a href="" target="_blank"><img src="media/download.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <a href="" target="_blank"><img src="media/malvika.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Malvika Goyal</h3>
           <p>Publicity Coordinator</p>
           <p>+919811486605</p>
