--- a/slc.html
+++ b/slc.html
@@ -112,7 +112,7 @@
     <div class="w3-row"><br>
 
         <div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/kovid-bhayana-b9644116a/" target="_blank"><img src="media/kovid.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <a href="https://www.linkedin.com/in/kovid-bhayana-b9644116a/" target="_blank"><img src="media/kd.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Kovid Bhayana</h3>
           <p>Vice President</p>
           <p>+919810189264</p>
