--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="media/Kovid.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="media/kd.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Kovid Bhayana</h3>
   <p>Vice President</p>
 </div>
