--- a/slc.html
+++ b/slc.html
@@ -119,7 +119,7 @@
           <p>Amity CSI Student Branch</p>
         </div>
   	<div class="w3-quarter">
-          <a href="" target="_blank"><img src="media/malvika.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <a href="https://www.linkedin.com/in/malvika-goyal-a5079a126" target="_blank"><img src="media/malvika.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Malvika Goyal</h3>
           <p>Publicity Coordinator</p>
           <p>+919811486605</p>
@@ -133,7 +133,7 @@
           <p>Amity CSI Student Branch</p>
     </div>
     <div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/alina-alina-78510a17b/" target="_blank"><img src="media/download.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <a href="https://www.linkedin.com/in/alina-alina-78510a17b/" target="_blank"><img src="media/alina.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Alina</h3>
     	    <p>Publicity Assistant</p>
           <p>+919999648478</p>
