--- a/slc.html
+++ b/slc.html
@@ -16,11 +16,11 @@
    <div class="w3-bar w3-theme-d2 w3-left-align">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-teal"><img class="fa fa-home w3-margin-right" src="media/csi-logo.png" width="20px" height= "parent"></i>CSI</a>
-    <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
-    <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Events</a>
-    <a href="#aboutus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Us</a>
-    <a href="#achievements" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Achievements</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+    <a href="index.html#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
+    <a href="index.html#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Events</a>
+    <a href="index.html#aboutus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Us</a>
+    <a href="index.html#achievements" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Achievements</a>
+    <a href="index.html#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
       <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-button" title="Notifications">Past Events <i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-card-4 w3-bar-block">
