--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <a href="slc.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">CSI UP State Student Convention 2019</a>
-  <a href="https://www.facebook.com/csiamity/" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Facebook">Latest Updates<i class="fa fa-facebook" style="padding: 0 0px 0 10px "></i></a>
+  <a href="https://www.facebook.com/amitycsistudentbranch/" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Facebook">Latest Updates<i class="fa fa-facebook" style="padding: 0 0px 0 10px "></i></a>
  </div>
 
   <!-- Navbar on small screens -->
