--- a/slc.html
+++ b/slc.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <a href="slc.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">CSI UP State Student Convention 2019</a>
-    <a href="https://www.facebook.com/csiamity/" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Facebook">Latest Updates<i class="fa fa-facebook" style="padding: 0 0px 0 10px "></i></a>
+    <a href="https://www.facebook.com/amitycsistudentbranch/" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Facebook">Latest Updates<i class="fa fa-facebook" style="padding: 0 0px 0 10px "></i></a>
    </div>
 
     <!-- Navbar on small screens -->
@@ -39,7 +39,7 @@
       <a href="#work" class="w3-bar-item w3-button">Work</a>
       <a href="#aboutus" class="w3-bar-item w3-button">About us</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-      <a href="#" class="w3-bar-item w3-button">Search</a>
+     <a href="slc.html" class="w3-bar-item w3-button">CSI UP State Student Convention 2019</a>
     </div>
   </div>
 
