--- a/slc.html
+++ b/slc.html
@@ -105,7 +105,9 @@
 
             <p>Exciting Gifts for winners.</p>
 
-            <p style="font-size: 20px">Hurry limited seats! <a href="http://bit.ly/Statelevelconvention_CSI" target="_blank" class="links">CLICK HERE</a> to Register NOW</p>
+            <p style="font-size: 20px">Hurry limited seats!</p>
+
+            <a href="http://bit.ly/Statelevelconvention_CSI" target="_blank" class="links w3-btn">REGISTER NOW</a>
 
 
             <p><br><br>For further queries, Contact:‬</p>
