--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
   <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Events</a>
   <a href="#aboutus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Us</a>
-  <a href="#achievements" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Achievements</a>
+  <!-- <a href="#achievements" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Achievements</a>
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
     <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Notifications">Past Events <i class="fa fa-caret-down"></i></button>
@@ -40,7 +40,7 @@
       <a href="#" class="w3-bar-item w3-button">2017-2018</a>
       <a href="#" class="w3-bar-item w3-button">2016-2017</a>
     </div>
-  </div>
+  </div> -->
   <a href="slc.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">CSI UP State Student Convention 2019</a>
   <a href="https://www.facebook.com/amitycsistudentbranch/" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Facebook">Latest Updates<i class="fa fa-facebook" style="padding: 0 0px 0 10px "></i></a>
  </div>
@@ -186,7 +186,7 @@
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  kovidbhayana.97@gmail.com</p>
     </div>
     <div class="w3-col m7">
-      <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="/action_page.php" target="_blank">
+      <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="mailto:Jso101196@gmail.com" method="GET" target="_blank">
       <div class="w3-section">
         <label>Name</label>
         <input class="w3-input" type="text" name="Name" required>
@@ -201,7 +201,7 @@
       </div>
       <input class="w3-check" type="checkbox" checked name="Like">
       <label>I Like it!</label>
-      <button type="submit" class="w3-button w3-right w3-theme">Send</button>
+      <button type="submit" class="w3-button w3-right w3-theme" value="Send">Send</button>
       </form>
     </div>
   </div>
