--- a/slc.html
+++ b/slc.html
@@ -19,16 +19,16 @@
     <a href="index.html#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
     <a href="index.html#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Events</a>
     <a href="index.html#aboutus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Us</a>
-    <a href="index.html#achievements" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Achievements</a>
+  <!--   <a href="index.html#achievements" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Achievements</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
-      <div class="w3-dropdown-hover w3-hide-small">
+     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-button" title="Notifications">Past Events <i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-card-4 w3-bar-block">
         <a href="#" class="w3-bar-item w3-button">2018-2019</a>
         <a href="#" class="w3-bar-item w3-button">2017-2018</a>
         <a href="#" class="w3-bar-item w3-button">2016-2017</a>
       </div>
-    </div>
+    </div> -->
     <a href="slc.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">CSI UP State Student Convention 2019</a>
     <a href="https://www.facebook.com/amitycsistudentbranch/" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Facebook">Latest Updates<i class="fa fa-facebook" style="padding: 0 0px 0 10px "></i></a>
    </div>
