--- a/slc.html
+++ b/slc.html
@@ -128,10 +128,10 @@
           <p>Amity CSI Student Branch</p>
     </div>
     <div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/sanyukta-shreshtha-569944176/" target="_blank"><img src="media/sanyukta.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
-          <h3>Sanyukta Shreshtha</h3>
-    	    <p>Publicity Assistant</p>
-          <p>+919521409776</p>
+          <a href="https://www.linkedin.com/in/akash-nigam-b78057160/" target="_blank"><img src="media/Akash.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <h3>Akash Nigam</h3>
+    	    <p>Publicity Coordinator</p>
+          <p>+919910418576</p>
           <p>Amity CSI Student Branch</p>
     </div>
     <div class="w3-quarter">
