--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="media/c6.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px; object-fit: cover;">
+  <img src="media/cover.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px; object-fit: cover;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">
     <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Amity CSI Student Branch</button>
   </div>
@@ -83,7 +83,7 @@
 </div>
 
 <div class="w3-quarter">
-  <a href="https://www.linkedin.com/in/shivam-saraf-046a52168/" target="_blank"><img src="media/Saraf.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+  <a href="https://www.linkedin.com/in/shivam-saraf-046a52168/" target="_blank"><img src="media/Shivam.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   <h3>Shivam Saraf</h3>
   <p>Secretary</p>
 </div>
