--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <h4>Encrypton based cipher puzzles</h4>
   <p>Our first benchmark event,
   established in the year 2015.
-  Participation of 200+ students which is increasing every iteration</p>
+  Participation of 200+ students which has been increasing every iteration.</p>
   </div>
   </div>
 </div>
@@ -134,8 +134,8 @@
   <img src="media/quizomania.png" alt="Mountains" style="width:100%">
   <div class="w3-container">
   <h3>Quiz-O-Mania</h3>
-  <h4>Tech Based Game Show</h4>
-  <p>Our latest Benchmark Event, established in the year 2017. First of its kind, game-show style event with a host, buzzers and rapid-fire rounds.</p>
+  <h4>Tech Based Live Game Show</h4>
+  <p>Our latest Benchmark Event, established in the year 2017. First of its kind, game-show style event with buzzers and rapid-fire rounds.</p>
   </div>
   </div>
 </div>
