--- a/slc.html
+++ b/slc.html
@@ -121,14 +121,14 @@
           <p>Amity CSI Student Branch</p>
         </div>
   	<div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/malvika-goyal-a5079a126" target="_blank"><img src="media/malvika.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <a href="https://www.linkedin.com/in/malvika-goyal-a5079a126" target="_blank"><img src="media/malvika.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Malvika Goyal</h3>
           <p>Publicity Coordinator</p>
           <p>+919811486605</p>
           <p>Amity CSI Student Branch</p>
     </div>
     <div class="w3-quarter">
-          <a href="https://www.linkedin.com/in/akash-nigam-b78057160/" target="_blank"><img src="media/Akash.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+          <a href="https://www.linkedin.com/in/akash-nigam-b78057160/" target="_blank"><img src="media/Akash2.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
           <h3>Akash Nigam</h3>
     	    <p>Publicity Coordinator</p>
           <p>+919910418576</p>
