--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
 
-  <p>©2019 Created by <a href="https://www.facebook.com/jaskirat.singh.oberoi.1996" target="_blank">Jaskirat Singh Oberoi</a></p>
+  <p>©2019 Created by <a href="https://www.linkedin.com/in/jaskiratoberoi/" target="_blank">Jaskirat Singh Oberoi</a></p>
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
     <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
