--- a/slc.html
+++ b/slc.html
@@ -107,7 +107,7 @@
 
             <p style="font-size: 20px">Hurry limited seats!</p>
 
-            <a href="http://bit.ly/Statelevelconvention_CSI" target="_blank" class="links w3-btn">REGISTER NOW</a>
+            <a href="http://bit.ly/Statelevelconvention_CSI" class="links w3-btn">REGISTER NOW</a>
 
 
             <p><br><br>For further queries, Contact:‬</p>
