--- a/slc.html
+++ b/slc.html
@@ -48,6 +48,12 @@
     <h1 class="heading margin3 margin2">CSI UP State Student Convention 2019</h1>
 
   </div>
+  <!-- Download Flyer -->
+  <div class="w3-right">
+    <form method="get" action="Doc1.pdf">
+      <button type="submit" class="links2 w3-btn">Download Flyer!</button>
+    </form>
+  </div>
   <!-- Events Container -->
   <div class="w3-container w3-padding-64 w3-center" id="team">
   <h2>THE EVENTS</h2>
