--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="w3-container">
   <h3>Decrypton</h3>
   <h4>Encrypton based cipher puzzles</h4>
-  <p class="justy">Our first benchmark event,
+  <p class="justy">Our first Major event,
   established in the year 2015.
   Participation of 200+ students which has been increasing every iteration.</p>
   </div>
@@ -124,7 +124,7 @@
   <div class="w3-container">
   <h3>Code Hunt</h3>
   <h4>Programming based treasure hunt</h4>
-  <p class="justy">Our Second Benchmark Event, established in the year 2016. This was one of our first inter-college events open to outside participation.</p>
+  <p class="justy">Our Second Major Event, established in the year 2016. This was one of our first inter-college events open to outside participation.</p>
   </div>
   </div>
 </div>
@@ -135,7 +135,7 @@
   <div class="w3-container">
   <h3>Quiz-O-Mania</h3>
   <h4>Tech Based Live Game Show</h4>
-  <p class="justy">Our latest Benchmark Event, established in the year 2017. First of its kind, game-show style event with buzzers and rapid-fire rounds.</p>
+  <p class="justy">Our latest Major Event, established in the year 2017. First of its kind, game-show style event with buzzers and rapid-fire rounds.</p>
   </div>
   </div>
 </div>
