--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <div class="w3-quarter">
 <h2>Events</h2>
-<p>Our Student Branch has hosted many events, competitions, workshops and interactive sessions in the past 5 years. Our Flagship events witness participation in huge numbers and are the ones in which students enjoy to their fullest. We therefore bring you those events into year after year. Our Current Major Events are the following.</p>
+<p class="justy">Our Student Branch has hosted many events, competitions, workshops and interactive sessions in the past 5 years. Our Flagship events witness participation in huge numbers and are the ones in which students enjoy to their fullest. We therefore bring you those events into year after year. Our Current Major Events are the following.</p>
 </div>
 
 <div class="w3-quarter">
