--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
     <h2>About Us</h2>
     <p>What our Student Branch Stands for and What We Do</p><br>
     <div class="information info2" id="info">
-      Our Student branch has been working actively for past many years. We are a University Level Branch at Amity University Noida campus,
+      <p class="justy">Our Student branch has been working actively for past many years. We are a University Level Branch at Amity University Noida campus,
       conducting many events, workshops, seminars, interactive lectures, hands-on sessions, competitions etc.
       Amity CSI Student Branch comes under the Region-I of the National Level
-      CSI Division. Our Student Branch Counsellor/Coordinator are:
+      CSI Division. Our Student Branch Counsellor/Coordinator are:</p>
       <div class="w3-row"><br>
 
       <div class="w3-half">
