--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>Amtiy CSI Student Branch</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="main.CSS">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="main.CSS">
 </heead>
 <body id="myPage">
 
@@ -144,7 +144,7 @@
 
 
 <!-- about us Row -->
-<div class="w3-row-padding w3-center w3-padding-64" id="aboutus">
+<div class="w3-row-padding center_text w3-padding-64" id="aboutus">
     <h2>About Us</h2>
     <p>What our Student Branch Stands for and What We Do</p><br>
     <div class="information info2" id="info">
