--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 
 <!-- about us Row -->
-<div class="w3-row-padding center_text w3-padding-64" id="aboutus">
+<div class="w3-row-padding w3-center w3-padding-64" id="aboutus">
     <h2>About Us</h2>
     <p>What our Student Branch Stands for and What We Do</p><br>
     <div class="information info2" id="info">
