--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <div class="w3-quarter">
 <h2>Events</h2>
-<p class="justy">Our Student Branch has hosted many events, competitions, workshops and interactive sessions in the past 5 years. Our Flagship events witness participation in huge numbers and are the ones in which students enjoy to their fullest. We therefore bring you those events into year after year. Our Current Major Events are the following.</p>
+<p class="w3-justify">Our Student Branch has hosted many events, competitions, workshops and interactive sessions in the past 5 years. Our Flagship events witness participation in huge numbers and are the ones in which students enjoy to their fullest. We therefore bring you those events into year after year. Our Current Major Events are the following.</p>
 </div>
 
 <div class="w3-quarter">
@@ -111,7 +111,7 @@
   <div class="w3-container">
   <h3>Decrypton</h3>
   <h4>Encrypton based cipher puzzles</h4>
-  <p class="justy">Our first Major event,
+  <p class="w3-justify">Our first Major event,
   established in the year 2015.
   Participation of 200+ students which has been increasing every iteration.</p>
   </div>
@@ -124,7 +124,7 @@
   <div class="w3-container">
   <h3>Code Hunt</h3>
   <h4>Programming based treasure hunt</h4>
-  <p class="justy">Our Second Major Event, established in the year 2016. This was one of our first inter-college events open to outside participation.</p>
+  <p class="w3-justify">Our Second Major Event, established in the year 2016. This was one of our first inter-college events open to outside participation.</p>
   </div>
   </div>
 </div>
@@ -135,7 +135,7 @@
   <div class="w3-container">
   <h3>Quiz-O-Mania</h3>
   <h4>Tech Based Live Game Show</h4>
-  <p class="justy">Our latest Major Event, established in the year 2017. First of its kind, game-show style event with buzzers and rapid-fire rounds.</p>
+  <p class="w3-justify">Our latest Major Event, established in the year 2017. First of its kind, game-show style event with buzzers and rapid-fire rounds.</p>
   </div>
   </div>
 </div>
@@ -148,7 +148,7 @@
     <h2>About Us</h2>
     <p>What our Student Branch Stands for and What We Do</p><br>
     <div class="information info2" id="info">
-      <p class="justy">Our Student branch has been working actively for past many years. We are a University Level Branch at Amity University Noida campus,
+      <p class="w3-justify">Our Student branch has been working actively for past many years. We are a University Level Branch at Amity University Noida campus,
       conducting many events, workshops, seminars, interactive lectures, hands-on sessions, competitions etc.
       Amity CSI Student Branch comes under the Region-I of the National Level
       CSI Division. Our Student Branch Counsellor/Coordinator are:</p>
