--- a/slc.html
+++ b/slc.html
@@ -50,7 +50,7 @@
   </div>
   <!-- Download Flyer -->
   <div class="w3-right">
-    <form method="get" action="Doc1.pdf">
+    <form method="get" action="flyer.pdf">
       <button type="submit" class="links2 w3-btn">Download Flyer!</button>
     </form>
   </div>
